tests/pass/0017_print_bool_variable.ee
fn main() {
    let x = true;
    debugPrint(x);
}
