tests/fail/0026_bool_relational_operator.ee
fn main() {
    debugPrint(true < false);
}
